--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -26,3 +26,17 @@
     background-color: #17A2B8;
     padding: 10%;
 }
+
+#button3 {
+    border-color: #17A2B8;
+}
+
+.contacto {
+    padding: 5%;
+}
+
+#button4 {
+    background-color: #17A2B8;
+    color: white;
+
+}
